// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Plot Config Service create operation, puts data in database 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "Item": Object {
          "baz": Object {
            "L": Array [
              Object {
                "N": "1",
              },
              Object {
                "N": "2",
              },
              Object {
                "N": "3",
              },
            ],
          },
          "experimentId": Object {
            "S": "1",
          },
          "foo": Object {
            "S": "bar",
          },
          "lastUpdated": Object {
            "S": "Wed Jan 01 2020",
          },
          "plotUuid": Object {
            "S": "plot1",
          },
        },
        "TableName": "plots-tables-test",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Test Plot Config Service delete operation, delete data from database 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "Key": Object {
          "experimentId": Object {
            "S": "1",
          },
          "plotUuid": Object {
            "S": "plot1",
          },
        },
        "TableName": "plots-tables-test",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Test Plot Config Service read operation, read data from database 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "Key": Object {
          "experimentId": Object {
            "S": "1",
          },
          "plotUuid": Object {
            "S": "plot1",
          },
        },
        "TableName": "plots-tables-test",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
